# SentinelZero

./: .gitignore  AUTHENTIK_SETUP.md  DEPLOYMENT.md  Dockerfile  HANDOFF.md  README.md  SCRIPTS.md  STARTUP.md  UV_MIGRATION.md  clean-restart.sh  cleanup-scans.sh  cleanup-sentinelzero.sh  debug-socket.sh  debug-start.sh  deploy.sh  docker-compose.yml  hunter.py  install.sh  network_settings.json  nohup.out  notification_settings.json  pyproject.toml  scheduled_scans_settings.json  sentinel-agent.service  sentinel-agent.timer  sentinelzero-frontend.service  sentinelzero.service  setup-loopbacks.sh  start-dev.sh  start-prod.sh  start_backend.sh  status.sh  stop-dev.sh  test-frontend.html  test_backend.py  test_backend_syntax.py  test_incomplete_scan.xml  test_incomplete_xml.py  workspaceState.state.json
backend/: .coverage  README.md  app.py  app_modular.py  app_monolithic_backup.py  cleanup_orphaned_scans.py  fix_scan_columns.py  main.py  migrate.py  migrate_insights.py  migrate_process_id.py  network_settings.json  nohup.out  notification_settings.json  pyproject.toml  requirements.txt  run-app.sh  run_tests.py  scan_output.xml  schedule_config.json  scheduled_scans_settings.json  security_settings.json  spa_routes.py  whatsup_config.ci.json  whatsup_config.json
backend/playwright-report/: index.html
backend/scans/: full_tcp_2025-07-18_0257.xml  full_tcp_2025-07-18_0258.xml  iot_ping_2025-07-20_0443.xml  iot_ping_2025-07-20_0445.xml  iot_ping_2025-07-20_0501.xml  iot_scan_2025-07-20_0431.xml  iot_scan_2025-07-20_0445.xml  iot_scan_2025-07-20_0501.xml  quick_scan_2025-07-20_0424.xml  quick_scan_2025-07-20_0425.xml  quick_scan_2025-07-20_0427.xml  quick_scan_2025-07-20_0429.xml  quick_scan_2025-07-20_0431.xml  quick_scan_2025-07-20_0436.xml  quick_scan_2025-07-20_0442.xml  quick_scan_2025-07-20_0459.xml  quick_scan_2025-07-20_0500.xml  quick_scan_2025-07-20_0501.xml  quick_scan_2025-07-20_0504.xml  quick_scan_2025-07-20_0505.xml  quick_scan_2025-07-20_0506.xml  quick_scan_2025-07-20_0519.xml  quick_scan_2025-07-20_0529.xml  quick_scan_2025-07-20_0532.xml  quick_scan_2025-07-20_0538.xml  quick_scan_2025-07-20_0539.xml  quick_scan_2025-07-20_0542.xml  quick_scan_2025-07-20_0546.xml  quick_scan_2025-07-20_0547.xml  quick_scan_2025-07-20_0548.xml  quick_scan_2025-07-20_0549.xml  quick_scan_2025-07-20_0551.xml  quick_scan_2025-07-20_0552.xml  quick_scan_2025-07-20_0554.xml  quick_scan_2025-07-20_0556.xml  quick_scan_2025-07-20_0600.xml  stealth_scan_2025-07-20_0509.xml  vuln_scripts_2025-07-20_0354.xml  vuln_scripts_2025-07-20_0509.xml
backend/scripts/: e2e_server.py
backend/src/: README.md  __init__.py
backend/templates/: error.html  index.html  scan_history.html  scans_table.html  (+1 more)
(+355 files in other folders)
