[project]
name = "sentinel-agent"
version = "0.1.0"
description = "SentinelZero LLM analysis agent"
requires-python = ">=3.12"
dependencies = [
    "openai>=1.30.0",
    "pyyaml>=6.0.1",
    "requests>=2.32.0",
    "pytest>=8.3.0",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
markers = [
    "live_home: tests that require reachable home-network hosts",
]
